--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,9 @@ coverage/
 # Misc
 .DS_Store
 Thumbs.db
+
+*package-lock.json
+*/*package-lock.json
+*/*package-lock.json
+*/*/*package-lock.json
+*/*/*/*package-lock.json
